Crash when using Grease Pencil Fill Brush #56577

Closed
opened 2018-08-27 22:30:43 +02:00 by Inês Almeida · 6 comments
Member

Blender Version
Broken: 0bdabaa3f6 (26 and 27 Aug 2018)

Exact steps for others to reproduce the error

  1. Open the attached file.
  2. Switch to Draw mode (the UI is not being saved).
  3. Notice that the brush settings are not showing (maybe related?). Pick some other brush and then the fill Brush again (now the material shows).
  4. Left-Click to use the fill brush. -> Crash.
    In gp_draw_strokes(), ma->gp_style is not valid.

Note: I didn't find a more minimal repro.
The crashy material is in the file because I added a monkey and removed it. GP_Black will not crash, but the few monkey materials I tested seem to.
I tried removing all my lines, and I still get a crash, but I couldn't get it from an empty file. I can try harder if it helps.

**Blender Version** Broken: 0bdabaa3f63 (26 and 27 Aug 2018) **Exact steps for others to reproduce the error** 1) Open the attached file. 2) Switch to Draw mode (the UI is not being saved). 3) Notice that the brush settings are not showing (maybe related?). Pick some other brush and then the fill Brush again (now the material shows). 4) Left-Click to use the fill brush. -> Crash. In gp_draw_strokes(), ma->gp_style is not valid. Note: I didn't find a more minimal repro. The crashy material is in the file because I added a monkey and removed it. GP_Black will not crash, but the few monkey materials I tested seem to. I tried removing all my lines, and I still get a crash, but I couldn't get it from an empty file. I can try harder if it helps.
Author
Member

Added subscriber: @brita

Added subscriber: @brita
Author
Member
[grease_pencil_test_fillcrash.blend](https://archive.blender.org/developer/F4415336/grease_pencil_test_fillcrash.blend)
Antonio Vazquez was assigned by Inês Almeida 2018-08-27 22:34:24 +02:00

I'm going to take a look.

I'm going to take a look.

This issue was referenced by 35c1baef27

This issue was referenced by 35c1baef27b81959d2c16f9f5e935fc91fb02667

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

IIRC this is a general tool problem. Campbell is working on it.

IIRC this is a general tool problem. Campbell is working on it.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56577
No description provided.