Fix T56577: Crash when using Grease Pencil Fill Brush

If the brush had assigned a color not present in the object material slots, the fill crashed.

Now, the material is added to the object slot before using it.